--- a/public/site.css
+++ b/public/site.css
@@ -1,11 +1,21 @@
 body { margin: 0; padding: 0; }
 
-.mapContainer {
+/*.mapContainer {
 position: absolute;
 top: 0;
 right: 0;
 left: 0;
 bottom: 0;
+}*/
+#UI {
+position: top;
+}
+.leaflet-container {
+  position: absolute;
+  margin-top: 64px;
+  z-index: -1000 !important;
+  width: 100%;
+  height: 100vh;
 }
 
 #menu {
@@ -13,6 +23,7 @@ position: absolute;
 background: #fff;
 padding: 10px;
 font-family: 'Open Sans', sans-serif;
+z-index: 10000;
 }
 #logoContainer {
     position: absolute;
