--- a/public/site.css
+++ b/public/site.css
@@ -8,14 +8,17 @@ left: 0;
 bottom: 0;
 }*/
 #UI {
-position: top;
+  z-index: 401;
+  position: relative;
 }
 .leaflet-container {
   position: absolute;
-  margin-top: 64px;
   z-index: -1000 !important;
   width: 100%;
   height: 100vh;
+}
+.leaflet-top{
+  top: 64px !important;
 }
 
 #menu {
