--- a/public/site.css
+++ b/public/site.css
@@ -11,7 +11,7 @@ bottom: 0;
   z-index: 401;
   position: relative;
 }
-.leaflet-container {
+#map {
   position: absolute;
   z-index: -1000 !important;
   width: 100%;
