--- a/public/site.css
+++ b/public/site.css
@@ -1,49 +1,42 @@
 body { margin: 0; padding: 0; }
 
-/*.mapContainer {
-position: absolute;
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
-}*/
-#UI {
-  z-index: 401;
-  position: relative;
-}
 #map {
   position: absolute;
-  z-index: -1000 !important;
+  top: 15vh;
+  right: 0;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  height: 100vh;
-}
-.leaflet-top{
-  top: 64px !important;
+  height: 85vh;
 }
 
 #menu {
-position: absolute;
-background: #fff;
-padding: 10px;
-font-family: 'Open Sans', sans-serif;
-z-index: 10000;
+  position: relative;
+  top: 0;
+  background: #fff;
+  padding: 10px;
+  font-family: 'Open Sans', sans-serif;
+  z-index: 10000;
+  height: 15vh;
 }
+
 #logoContainer {
     position: absolute;
     z-index: 100;
     top: 60px;
     left: 0px;
 }
+
 .coordinates {
-background: rgba(0, 0, 0, 0.5);
-color: #fff;
-position: absolute;
-bottom: 40px;
-left: 10px;
-padding: 5px 10px;
-margin: 0;
-font-size: 11px;
-line-height: 18px;
-border-radius: 3px;
-display: none;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  position: absolute;
+  bottom: 40px;
+  left: 10px;
+  padding: 5px 10px;
+  margin: 0;
+  font-size: 11px;
+  line-height: 18px;
+  border-radius: 3px;
+  display: none;
 }
